# yaak

./: .gitignore  Conventions  Makefile  MakefileTestPlugin  MakefileTestPluginWithoutDsl  README.md  TODO  build  installLibaries
BeyondC/tools/eli-4.8.1/: BUILD  Makefile.in  README  README.Windows  README.dist  README.versionedpkg  aclocal.m4  configure  configure.in  eli.sh  install.sh  sfdocs  symlinks  testcurses  testwin
BeyondC/tools/eli-4.8.1/Eli/: INSTALL  Makefile.in  README  config.h.in  configure  configure.in
BeyondC/tools/eli-4.8.1/Eli/autom4te.cache/: output.0  requests  traces.0
BeyondC/tools/eli-4.8.1/Eli/include/: Adtmk.h  Inputmk.h  Scanmk.h  pdlmk.h  toolmk.h
BeyondC/tools/eli-4.8.1/Eli/pkg/: Makefile.in  PKGLST
BeyondC/tools/eli-4.8.1/Eli/pkg/Adt/: BitSet.fw  BitSet.gnrc  DynSpace.fw  FunctionTypes.fw  FunctionTypes.gnrc  IntSet.fw  IntSet.gnrc  LidoList.fw  LidoList.gnrc  List.fw  List.gnrc  Makefile.in  Map.fw  Map.gnrc  PtrList.fw  PtrList.gnrc  PtrList.specs  Stack.fw  Stack.gnrc  Table.fw  Table.gnrc  csm.dapto  csm.reqmod  csm.save.eta  csm.specs  csmtbl.h  elisave.fw  hashtbl.c  hashtbl.h  obsave.reqmod  obsave.specs  obstack.reqmod  obstack.specs
BeyondC/tools/eli-4.8.1/Eli/pkg/Input/: CmdLineIncl.fw  CmdLineIncl.gnrc  CoordMap.fw  CoordMap.gnrc  CurrTok.fw  CurrTok.gnrc  Include.fw  Include.gnrc  Makefile.in  cppline.fw  err.dapto  err.reqmod  err.specs  err.tcl  source.reqmod  source.specs
BeyondC/tools/eli-4.8.1/Eli/pkg/Name/: AlgInh.fw  AlgInh.gnrc  AlgRangeSeq.fw  AlgRangeSeq.gnrc  AlgScope.fw  AlgScope.gnrc  AlgScopeProp.fw  AlgScopeProp.gnrc  BuInh.fw  BuInh.gnrc  BuRangeSeq.fw  BuRangeSeq.gnrc  BuScope.fw  BuScope.gnrc  BuScopeProp.fw  BuScopeProp.gnrc  CInh.fw  CInh.gnrc  CRangeSeq.fw  CRangeSeq.gnrc  CScope.fw  CScope.gnrc  CScopeProp.fw  CScopeProp.gnrc  Makefile.in  PreDefId.fw  PreDefId.gnrc  PreDefMod.specs  PreDefine.fw  PreDefine.gnrc  ScopeProp.fw  ScopeProp.gnrc  ShowBinding.fw  ShowBinding.gnrc  envmod.dapto  envmod.head  envmod.reqmod  envmod.save.eta  envmod.specs  envmod.tcl
BeyondC/tools/eli-4.8.1/Eli/pkg/Output/: BlockPrint.fw  C_Separator.fw  Indent.fw  Indent.gnrc  LeafPtg.fw  LeafPtg.gnrc  Makefile.in  OutStr.fw  OutStr.gnrc  PrettyPrint.fw  PtgCommon.fw  PtgOutput.fw  PtgOutput.gnrc  Separator.fw  Sp_Separator.fw  StringOut.fw  StringOut.gnrc
BeyondC/tools/eli-4.8.1/Eli/pkg/Prop/: FirstOcc.fw  FirstOcc.gnrc  Kind.fw  Kind.gnrc  KindBad.h  KindSet.fw  KindSet.gnrc  Makefile.in  ObjCnt.fw  ObjCnt.gnrc  OccCnt.fw  OccCnt.gnrc  PropLib.fw  PropLib.gnrc  Reflex.fw  Reflex.gnrc  SetFirst.fw  SetFirst.gnrc  Unique.fw  Unique.gnrc
BeyondC/tools/eli-4.8.1/Eli/pkg/Scan/: CchStr.c  Cint.c  Ctext.c  M2chStr.c  M2int.c  M3comment.c  Makefile.in  auxNewLine.c  auxNoEOL.c  auxTab.c  coordAdjust.c  dfltscan.c  idn.reqmod  idn.save.eta  idn.specs  idntbl.h  pascalCom.c  pascalStr.c
BeyondC/tools/eli-4.8.1/Eli/pkg/Tech/: Counter.fw  Counter.gnrc  Hash.specs  MakeName.fw  MakeName.gnrc  Makefile.in  Sort.fw  Sort.gnrc  Storage.c  Storage.h  Storage.head  Storage.specs  StrArith.fw  StrArith.gnrc  Strings.head  Strings.specs  Strings.tcl  hash.c  hash.h  ndxmath.c  ndxmath.h  ndxmath.specs  strmath.c  strmath.specs
BeyondC/tools/eli-4.8.1/Eli/pkg/Type/: AdaptOil.fw  AdaptOil.gnrc  BuType.fw  BuType.gnrc  CType.fw  CType.gnrc  Defer.fw  Defer.gnrc  Expression.fw  Expression.gnrc  Makefile.in  Operator.fw  Operator.gnrc  PreDefOp.fw  PreDefOp.gnrc  StructEquiv.fw  Type.fw  Type.gnrc  TypeDep.fw  TypeDep.gnrc  Typing.fw  Typing.gnrc  nameeqv.c  nameeqv.h
BeyondC/tools/eli-4.8.1/Eli/pkg/Unparser/: Analysis.fw  Cpp.fw  Idem.fw  Java.fw  Makefile.in  Odinfile  Tree.fw  Xml.fw
BeyondC/tools/eli-4.8.1/Eli/pkg/adtinit/: Makefile.in  adtinit.dg  csmidnOut.sh  csmidnProd.sh
BeyondC/tools/eli-4.8.1/Eli/pkg/burg/: Makefile.in  burg.dg  burg.err  burgGen.sh  burgOut.sh
BeyondC/tools/eli-4.8.1/Eli/pkg/cc/: Makefile.in  c.o.sh.in  c_srcs.sh  cc.dg.in  cexe.sh  errfilter.sed
BeyondC/tools/eli-4.8.1/Eli/pkg/clp/: Makefile.in  clp.c  clp.dapto  clp.dg  clp.err  clp.fw  clp.reqmod  clp.specs  clp.tnf  clp_gen.sh  clp_out.sh  dfltclp.clp
BeyondC/tools/eli-4.8.1/Eli/pkg/cola/: Makefile.in  cola.dg  colaBe.sh.in  colaFe.sh  colaLalr.sh  colaOpt.sh  colaOut.sh
BeyondC/tools/eli-4.8.1/Eli/pkg/cpp/: Makefile.in  cpp.dg  cpp.sh  cppErr.sh  cpp_tab.sh  do_cpp.sh  incl.dir.sh
BeyondC/tools/eli-4.8.1/Eli/pkg/cxx/: Makefile.in  cxx.dg  cxx.o.sh.in  cxx_srcs.sh  errfilter.sed
BeyondC/tools/eli-4.8.1/Eli/pkg/dapto/: Makefile.in  dapGen.sh  dapOut.sh.in  dapto.c  dapto.dapto  dapto.dg  dapto.err  dapto.fw  dapto.h  dapto.reqmod  init.sh.in
BeyondC/tools/eli-4.8.1/Eli/pkg/dbx/: Makefile.in  dbx.dg  dbx.sh  gdb.sh
BeyondC/tools/eli-4.8.1/Eli/pkg/delit/: Makefile.in  delit.dg  lit_gen.sh.in  lit_out.sh
BeyondC/tools/eli-4.8.1/Eli/tests/: Odinfile
BeyondC/tools/eli-4.8.1/Odin/: .project  CLEAN  INSTALL  README  configure  configure.ac  symlinks
BeyondC/tools/eli-4.8.1/Odin/autom4te.cache/: output.0  traces.0
BeyondC/tools/eli-4.8.1/Odin/doc/: Odinfile  editline.3  odin.1  odin.bib  odin.html  odin.tex
BeyondC/tools/eli-4.8.1/Odin/etc/: CHANGES  FAQ  NOTES  odin  odin.el
BeyondC/tools/eli-4.8.1/Odin/pkg/: PKGLST
BeyondC/tools/eli-4.8.1/autom4te.cache/: output.0  traces.0
BeyondC/tools/eli-4.8.1/doc/Eli/: AttributeDependenceToolGorto.html  CDebbugging.html  Chain.html  Constituents.html  CyclicAttributeDependence.html  DirectCycles.html  EliRefCard_1.html  EliRefCard_2.html  EliRefCard_3.html  EliRefCard_toc.html  ElisErrorMessages.html  ExtendedProtocolsFromEli.html  GenerationOfTestOutput.html  Including.html  InducedCycles.html  InspectionByAuthorOthers.html  MissingComputations.html  Noosa.html  NoosaAbstree1.html  NoosaAbstree2.html  NoosaPhrase.html  NoosaStrings.html  NoosaTokenExample.html  PartitionedCycles.html  RemoteAccess.html  adt_1.html  adt_2.html  adt_3.html  adt_4.html  adt_5.html  adt_6.html  adt_7.html  adt_8.html  adt_9.html  adt_toc.html  clp_1.html  clp_2.html  clp_3.html  clp_4.html  clp_5.html  (+331 more)
(+2211 files in other folders)
